# autolink-references-mkdocs-plugin

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml  setup.py
.github/workflows/: ci.yml  release.yml
autolink_references/: __init__.py  main.py
src/autolink_references/: __init__.py
tests/: test_alphanumeric_parser.py  test_parser.py
