[project]
name = "autolink-references-mkdocs-plugin"
description = "This plugin allows to configure your own autolink references for non-GitHub URLs."
authors = [
    { name = "Saurabh Kumar", email = "autolink-references-mkdocs-plugin@saurabh-kumar.com" }
]
readme = "README.md"
license = "MIT"
requires-python = ">= 3.8"
dynamic = ["version"]
dependencies = ["mkdocs"]

keywords = [
    'autolink',
    'mkdocs',
    'regex',
]

classifiers=[
    'Development Status :: 4 - Beta',
    'Programming Language :: Python',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
    'Intended Audience :: Developers',
    'Intended Audience :: System Administrators',
    'License :: OSI Approved :: MIT License',
    'Operating System :: OS Independent',
    'Topic :: Utilities',
]

[project.entry-points."mkdocs.plugins"]
autolink_references = "autolink_references:AutolinkReference"

[project.urls]
Documentation = "https://github.com/theskumar/autolink-references-mkdocs-plugin/tree/main#readme"
Source = "https://github.com/theskumar/autolink-references-mkdocs-plugin"
Tracker = "https://github.com/theskumar/autolink-references-mkdocs-plugin/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "pytest~=7.3.2",
    "ruff~=0.0.272",
    "hatch~=1.7.0",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.sdist]
include = [
  "/src",
]

[tool.hatch.build.targets.wheel]
packages = ["src/autolink_references"]

[tool.hatch.version]
path = "src/autolink_references/__about__.py"
